--- a/nim_app/.project
+++ b/nim_app/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>nim app</name>
+	<name>nim_app</name>
 	<comment></comment>
 	<projects>
 	</projects>
